adding social media
