# docs/swagger.yaml
@@ -9,13 +9,6 @@ definitions:
       user_id:
         type: integer
     type: object
-  dto.PhotoRequestBody:
-    properties:
-      caption:
-        type: integer
-      title:
-        type: integer
-    type: object
   entities.Comment:
     properties:
       created_at:
@@ -190,10 +183,10 @@ paths:
       parameters:
       - description: create photo
         in: body
-        name: dto.PhotoRequestBody
+        name: entities.Photo
         required: true
         schema:
-          $ref: '#/definitions/dto.PhotoRequestBody'
+          $ref: '#/definitions/entities.Photo'
       produces:
       - application/json
       responses:
@@ -265,6 +258,27 @@ paths:
       summary: Update photo identified by given id
       tags:
       - Photo
+  /social-media/{Id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete the social media corresponding to the input id
+      parameters:
+      - description: ID of the social media to be deleted
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No content
+      security:
+      - Bearer: []
+      summary: Delete social media identified by given id
+      tags:
+      - Social Media
 securityDefinitions:
   Bearer:
     description: Type "Bearer" followed by a space and JWT token.
